--- a/base/postgresql-dc.yaml
+++ b/base/postgresql-dc.yaml
@@ -5,7 +5,7 @@ metadata:
     app: sonarqube
     app.kubernetes.io/component: postgresql-sonarqube-dc
     app.kubernetes.io/instance: database
-    app.kubernetes.io/part-of: sonarqube
+    app.kubernetes.io/part-of: sonarqube-app
     app.openshift.io/runtime: postgresql
     deploymentconfig: postgresql-sonarqube
   name: postgresql-sonarqube
