--- a/base/sonarqube-route.yaml
+++ b/base/sonarqube-route.yaml
@@ -8,7 +8,7 @@ metadata:
     app: sonarqube
     app.kubernetes.io/component: sonarqube-route
     app.kubernetes.io/instance: sonarqube
-    app.kubernetes.io/part-of: sonarqube
+    app.kubernetes.io/part-of: sonarqube-app
   name: sonarqube
 spec:
   to:
