--- a/base/sonarqube-svc.yaml
+++ b/base/sonarqube-svc.yaml
@@ -5,7 +5,7 @@ metadata:
     app: sonarqube
     app.kubernetes.io/component: sonarqube-svc
     app.kubernetes.io/instance: sonarqube
-    app.kubernetes.io/part-of: sonarqube
+    app.kubernetes.io/part-of: sonarqube-app
   name: sonarqube
 spec:
   ports:
